--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,9 @@ section {
     background-image: url(/images/pattern-bg.svg);
     background-repeat: no-repeat;
     background-position: right;
+    background-size: contain;
+    background-position-y: -1em;
+    z-index: -2;
 }
 
 .testimonial-card {
@@ -41,21 +44,21 @@ section {
     background-image: url(/images/pattern-quotes.svg);
     background-repeat: no-repeat;
     background-position:top left;
-    border: 1px solid black;
+    position: relative;
 }
 
 .bio {
-    border: 1px solid red;
     display:block;
     position: relative;
     width: 95%;
 }
 
 .description {
-    font-weight: 300;
-    width: 90%;
-    border: 1px solid red;
-
+    font-weight: 100;
+    width: 120%;
+    font-size: 32px;
+    color: gray;
+    z-index: 2;
 }
 
 .description-two {
@@ -64,33 +67,51 @@ section {
     display: flex;
 }
 
+.two {
+    width: 80%;
+}
+
 .description-two > h6:nth-of-type(1){
-    font-weight: 500;
+    font-weight: 700;
 }
 
 
 .description-two > h6:nth-of-type(2){
-    color: red;
     font-weight: 100;
     color: gray;
     margin-left: .5em;
 }
-.profile-image {
-    border: 1px solid red;
+
+.profile-image > .btn {
     position: relative;
+    width: 20%;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.btn > button {
+    border-radius: 10%;
+    margin-top: -4em;
+    background-position: center;
+    width: 3em;
+    cursor: pointer;  
 }
 
 .profile-image > img {
-    width: 400px;
-    height: 400px;
-    border: 1px solid blue;
-    background-size: cover;
+    width: 500px;
+    height: 500px;
+    background-size: contain;
+    position: relative;
+    z-index: -1;
 }
-.attribution {
-    font-size: 11px;
-    text-align: center;
-  }
 
-  .attribution a {
-    color: hsl(228, 45%, 44%);
-  }
+.attribution { 
+    font-size: 11px; 
+    text-align: center; 
+}
+
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
